--- a/test1.ipynb
+++ b/test1.ipynb
@@ -10,20 +10,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8ec76613",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d02b6245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.17640523  0.04001572  0.0978738 ]\n",
+      " [ 0.22408932  0.1867558  -0.09772779]\n",
+      " [ 0.09500884 -0.01513572 -0.01032189]\n",
+      " [ 0.04105985  0.01440436  0.14542735]\n",
+      " [ 0.07610377  0.0121675   0.04438632]\n",
+      " [ 0.03336743  0.14940791 -0.02051583]\n",
+      " [ 0.03130677 -0.08540957 -0.25529898]\n",
+      " [ 0.06536186  0.08644362 -0.0742165 ]]\n",
+      "[[0. 0. 0.]]\n",
+      "[[ 0.22697546 -0.14543657  0.00457585 -0.01871839  0.15327792  0.14693588\n",
+      "   0.01549474  0.03781625]\n",
+      " [-0.08877857 -0.19807965 -0.03479121  0.0156349   0.12302907  0.12023798\n",
+      "  -0.03873268 -0.03023028]\n",
+      " [-0.1048553  -0.14200179 -0.17062702  0.19507754 -0.05096522 -0.04380743\n",
+      "  -0.12527954  0.07774904]]\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set up Data\n",
+    "X = np.eye(8)    # input\n",
+    "Y = X.copy()     # output\n",
+    "\n",
+    "n_input = 8\n",
+    "n_hidden = 3\n",
+    "n_output = 8\n",
+    "\n",
+    "np.random.seed(0)   # for reproducibility\n",
+    "\n",
+    "W1 = np.random.randn(n_input, n_hidden) * 0.1\n",
+    "b1 = np.zeros((1, n_hidden))\n",
+    "W2 = np.random.randn(n_hidden, n_output) * 0.1\n",
+    "b2 = np.zeros((1, n_output))\n",
+    "\n",
+    "print(W1)\n",
+    "print(b1)\n",
+    "print(W2)\n",
+    "print(b2)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
