--- a/test1.ipynb
+++ b/test1.ipynb
@@ -70,6 +70,23 @@
     "print(W2)\n",
     "print(b2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0c55d5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Activation Function\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    s = sigmoid(x)\n",
+    "    return s * (1 - s)\n"
+   ]
   }
  ],
  "metadata": {
