--- a/test1.ipynb
+++ b/test1.ipynb
@@ -30,22 +30,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.17640523  0.04001572  0.0978738 ]\n",
-      " [ 0.22408932  0.1867558  -0.09772779]\n",
-      " [ 0.09500884 -0.01513572 -0.01032189]\n",
-      " [ 0.04105985  0.01440436  0.14542735]\n",
-      " [ 0.07610377  0.0121675   0.04438632]\n",
-      " [ 0.03336743  0.14940791 -0.02051583]\n",
-      " [ 0.03130677 -0.08540957 -0.25529898]\n",
-      " [ 0.06536186  0.08644362 -0.0742165 ]]\n",
-      "[[0. 0. 0.]]\n",
-      "[[ 0.22697546 -0.14543657  0.00457585 -0.01871839  0.15327792  0.14693588\n",
-      "   0.01549474  0.03781625]\n",
-      " [-0.08877857 -0.19807965 -0.03479121  0.0156349   0.12302907  0.12023798\n",
-      "  -0.03873268 -0.03023028]\n",
-      " [-0.1048553  -0.14200179 -0.17062702  0.19507754 -0.05096522 -0.04380743\n",
-      "  -0.12527954  0.07774904]]\n",
-      "[[0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+      "(8, 3) (1, 3)\n",
+      "(3, 8) (1, 8)\n",
+      "(8, 8) (8, 8)\n"
      ]
     }
    ],
@@ -65,15 +52,14 @@
     "W2 = np.random.randn(n_hidden, n_output) * 0.1\n",
     "b2 = np.zeros((1, n_output))\n",
     "\n",
-    "print(W1)\n",
-    "print(b1)\n",
-    "print(W2)\n",
-    "print(b2)\n"
+    "print(W1.shape, b1.shape)\n",
+    "print(W2.shape, b2.shape)\n",
+    "print(X.shape, Y.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0c55d5eb",
    "metadata": {},
    "outputs": [],
@@ -85,7 +71,55 @@
     "\n",
     "def sigmoid_derivative(x):\n",
     "    s = sigmoid(x)\n",
-    "    return s * (1 - s)\n"
+    "    return s * (1 - s)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f38f3c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feedforward Phase \n",
+    "\n",
+    "def feedforwrd(X): \n",
+    "    z1 = np.dot(X, W1) + b1\n",
+    "    a1 = sigmoid(z1)  # hidden layer activations \n",
+    "\n",
+    "    z2 = np.dot(a1, W2) + b2\n",
+    "    Y_hat = sigmoid(z2)  # final output \n",
+    "\n",
+    "    return a1, Y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e51d9bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Backpropagation Phase \n",
+    "\n",
+    "def backprop(X, Y, a1, Y_hat2, lr = 0.5) : \n",
+    "    global W1, b1, W2, b2\n",
+    "\n",
+    "# Output layer error \n",
+    "    error = Y - Y_hat2\n",
+    "    dY_hat2 = error * sigmoid_derivative(Y_hat2) \n",
+    "\n",
+    "# Hidden layer error \n",
+    "    d_a1 = np.dot(dY_hat2, W2.T) * sigmoid_derivative(a1)\n",
+    "\n",
+    "# Update weights and biases\n",
+    "    W2 += np.dot(a1.T, dY_hat2) * lr\n",
+    "    b2 += np.sum(d_a1, axis = 0, keepdims = True) * lr \n",
+    "\n",
+    "    W1 += np.dot(X.T, d_a1) * lr\n",
+    "    b1 += np.sum(d_a1, axis = 0, keepdims = True) * lr\n",
+    "\n",
+    "    return np.mean(np.abs(error))"
    ]
   }
  ],
