--- a/test1.ipynb
+++ b/test1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d02b6245",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0c55d5eb",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
     "    z2 = np.dot(a1, W2) + b2\n",
     "    Y_hat = sigmoid(z2)  # final output \n",
     "\n",
-    "    return a1, Y_hat"
+    "    return z1, z2, a1, Y_hat"
    ]
   },
   {
@@ -102,24 +102,24 @@
    "source": [
     "# Backpropagation Phase \n",
     "\n",
-    "def backprop(X, Y, a1, Y_hat2, lr = 0.5) : \n",
+    "def backprop(X, Y, a1, Y_hat, z1, z2, lr = 0.5) : \n",
     "    global W1, b1, W2, b2\n",
     "\n",
-    "# Output layer error \n",
-    "    error = Y - Y_hat2\n",
-    "    dY_hat2 = error * sigmoid_derivative(Y_hat2) \n",
+    "    # Output layer error \n",
+    "    error = Y_hat - Y\n",
+    "    dY_hat = error * sigmoid_derivative(z2) \n",
     "\n",
-    "# Hidden layer error \n",
-    "    d_a1 = np.dot(dY_hat2, W2.T) * sigmoid_derivative(a1)\n",
+    "    # Hidden layer error \n",
+    "    d_a1 = np.dot(dY_hat, W2.T) * sigmoid_derivative(z1)\n",
     "\n",
-    "# Update weights and biases\n",
-    "    W2 += np.dot(a1.T, dY_hat2) * lr\n",
-    "    b2 += np.sum(d_a1, axis = 0, keepdims = True) * lr \n",
+    "    # Update weights and biases\n",
+    "    W2 -= np.dot(a1.T, dY_hat) * lr\n",
+    "    b2 -= np.sum(dY_hat, axis = 0, keepdims = True) * lr \n",
     "\n",
-    "    W1 += np.dot(X.T, d_a1) * lr\n",
-    "    b1 += np.sum(d_a1, axis = 0, keepdims = True) * lr\n",
+    "    W1 -= np.dot(X.T, d_a1) * lr\n",
+    "    b1 -= np.sum(d_a1, axis = 0, keepdims = True) * lr\n",
     "\n",
-    "    return np.mean(np.abs(error))"
+    "    return np.mean(np.abs(Y - Y_hat))"
    ]
   }
  ],
