--- a/test1.ipynb
+++ b/test1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "8ec76613",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "d02b6245",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "0c55d5eb",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "5f38f3c2",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9e51d9bb",
    "metadata": {},
    "outputs": [],
@@ -120,6 +120,88 @@
     "    b1 -= np.sum(d_a1, axis = 0, keepdims = True) * lr\n",
     "\n",
     "    return np.mean(np.abs(Y - Y_hat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fba043f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch     0 | MSE loss: 0.125112 | MAE: 0.499326\n",
+      "Epoch  1000 | MSE loss: 0.008452 | MAE: 0.069709\n",
+      "Epoch  2000 | MSE loss: 0.001346 | MAE: 0.033687\n",
+      "Epoch  3000 | MSE loss: 0.000631 | MAE: 0.023704\n",
+      "Epoch  4000 | MSE loss: 0.000418 | MAE: 0.019411\n",
+      "Epoch  5000 | MSE loss: 0.000313 | MAE: 0.016833\n",
+      "Epoch  6000 | MSE loss: 0.000250 | MAE: 0.015063\n",
+      "Epoch  7000 | MSE loss: 0.000208 | MAE: 0.013751\n",
+      "Epoch  8000 | MSE loss: 0.000178 | MAE: 0.012729\n",
+      "Epoch  9000 | MSE loss: 0.000156 | MAE: 0.011903\n",
+      "\n",
+      "Final predictions after training:\n",
+      "[[0.969 0.    0.    0.015 0.028 0.    0.014 0.   ]\n",
+      " [0.    0.968 0.    0.    0.028 0.015 0.017 0.   ]\n",
+      " [0.    0.    0.969 0.018 0.    0.02  0.02  0.   ]\n",
+      " [0.024 0.    0.016 0.973 0.    0.    0.    0.022]\n",
+      " [0.01  0.015 0.    0.    0.958 0.    0.    0.016]\n",
+      " [0.    0.025 0.016 0.    0.    0.972 0.    0.023]\n",
+      " [0.026 0.024 0.017 0.    0.    0.    0.972 0.   ]\n",
+      " [0.    0.    0.    0.016 0.027 0.016 0.    0.969]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Training loop ---\n",
+    "\n",
+    "def mse_loss(Y_hat, Y):\n",
+    "    return 0.5 * np.mean((Y_hat - Y)**2)\n",
+    "\n",
+    "epochs = 10000\n",
+    "lr = 0.5\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    # --- Forward ---\n",
+    "    z1, z2, a1, Y_hat = feedforwrd(X)\n",
+    "\n",
+    "    # --- Compute loss ---\n",
+    "    loss = mse_loss(Y_hat, Y)\n",
+    "\n",
+    "    # --- Backpropagation & update ---\n",
+    "    mae = backprop(X, Y, a1, Y_hat, z1, z2, lr)\n",
+    "\n",
+    "    # --- Monitor progress every 1000 epochs ---\n",
+    "    if epoch % 1000 == 0:\n",
+    "        print(f\"Epoch {epoch:5d} | MSE loss: {loss:.6f} | MAE: {mae:.6f}\")\n",
+    "\n",
+    "# --- Final output check ---\n",
+    "print(\"\\nFinal predictions after training:\")\n",
+    "print(np.round(Y_hat, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ce67938b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_classes = np.argmax(Y_hat, axis=1)\n",
+    "true_classes = np.argmax(Y, axis=1)\n",
+    "accuracy = np.mean(predicted_classes == true_classes)\n",
+    "print(\"Accuracy:\", accuracy)"
    ]
   }
  ],
