--- a/test1.ipynb
+++ b/test1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "d02b6245",
    "metadata": {},
    "outputs": [
@@ -37,15 +37,17 @@
    ],
    "source": [
     "# set up Data\n",
-    "X = np.eye(8)    # input\n",
-    "Y = X.copy()     # output\n",
+    "X = np.eye(8)   \n",
+    "Y = X.copy()   \n",
     "\n",
+    "# Parameters\n",
     "n_input = 8\n",
     "n_hidden = 3\n",
     "n_output = 8\n",
     "\n",
-    "np.random.seed(0)   # for reproducibility\n",
+    "np.random.seed(0)   \n",
     "\n",
+    "# Initialize weights and biases\n",
     "W1 = np.random.randn(n_input, n_hidden) * 0.1\n",
     "b1 = np.zeros((1, n_hidden))\n",
     "W2 = np.random.randn(n_hidden, n_output) * 0.1\n",
@@ -58,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "0c55d5eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Activation Function\n",
+    "# --- Activation Function ---\n",
     "\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))\n",
@@ -75,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "5f38f3c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feedforward Phase \n",
+    "# --- Feedforward Phase ---\n",
     "\n",
     "def feedforwrd(X): \n",
     "    z1 = np.dot(X, W1) + b1\n",
@@ -94,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "9e51d9bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Backpropagation Phase \n",
+    "# --- Backpropagation Phase ---\n",
     "\n",
     "def backprop(X, Y, a1, Y_hat, z1, z2, lr = 0.5) : \n",
     "    global W1, b1, W2, b2\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "fba043f1",
    "metadata": {},
    "outputs": [
@@ -164,13 +166,13 @@
     "lr = 1\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    # --- Forward ---\n",
+    "    # Forward\n",
     "    z1, z2, a1, Y_hat = feedforwrd(X)\n",
     "\n",
-    "    # --- Compute loss ---\n",
+    "    # Compute loss \n",
     "    loss = mse_loss(Y_hat, Y)\n",
     "\n",
-    "    # --- Backpropagation & update ---\n",
+    "    # Backpropagation and update \n",
     "    mae = backprop(X, Y, a1, Y_hat, z1, z2, lr)\n",
     "\n",
     "\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "f9667b7d",
    "metadata": {},
    "outputs": [
@@ -262,7 +264,7 @@
     "for lr in learning_rates:\n",
     "    print(f\"\\nTraining with learning rate = {lr}\")\n",
     "\n",
-    "    # --- Same initialization for fair comparison ---\n",
+    "    # Initialize weights and biases for fair comparison\n",
     "    np.random.seed(0)\n",
     "    W1 = np.random.randn(n_input, n_hidden) * 0.1\n",
     "    b1 = np.zeros((1, n_hidden))\n",
@@ -273,16 +275,13 @@
     "\n",
     "    \n",
     "    for epoch in range(epochs):\n",
-    "        # Forward\n",
+    "        \n",
     "        z1, z2, a1, Y_hat = feedforwrd(X)\n",
     "\n",
-    "      \n",
     "        loss = mse_loss(Y_hat, Y)\n",
     "        losses.append(loss)\n",
     "\n",
-    "        # Backpropagation & update\n",
     "        mae = backprop(X, Y, a1, Y_hat, z1, z2, lr)\n",
-    "\n",
     "        \n",
     "        if epoch % 1000 == 0:\n",
     "            print(f\"Epoch {epoch:5d} | MSE loss: {loss:.6f}\")\n",
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "bbdb68db",
    "metadata": {},
    "outputs": [
